egressgateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: istio-egressgateway
spec:
 selector:
   istio: egressgateway
 servers:
 - port:
     number: 1521
     name: tcp
     protocol: TCP
   hosts:
   - "database.domainname"
