destination_rule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-external-svc-db
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local #не уверен насчет адреса
  subsets:
  - name: external-svc-db
