vc-egress.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-routing
  namespace: egress
spec:
  hosts:
  - database.domainname
  exportTo:
  - "."
  gateways:
  - mesh
  - istio-egressgateway
  http:
  - match:
    - port: 80
      gateways:
      - mesh
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: external-svc-db
        port:
          number: 80
  - match:
    - port: 80
      gateways:
      - istio-egressgateway
    route:
    - destination:
        host: database.domainname
